--- a/css/components/ui/_intro.scss
+++ b/css/components/ui/_intro.scss
@@ -9,6 +9,16 @@
   min-height: 580px;
   padding: 100px 30px;
 
+  @media #{$mq-small-medium} {
+    padding: 160px 20px 70px;
+    min-height: 100px;;
+
+    .column {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
   .title {
     position: relative;
     font-size: 53px;
@@ -17,6 +27,13 @@
     font-weight: $font-weight-light;
     margin-bottom: 18px;
     margin-top: 30px;
+
+    @media #{$mq-small-medium} {
+      font-size: 28px;
+      line-height: 35px;
+      padding-bottom: 0;
+      margin: 0;
+    }
 
     &.-no-underline {
       &:after { display: none; }
