--- a/css/components/ui/_section.scss
+++ b/css/components/ui/_section.scss
@@ -8,6 +8,10 @@
   color: $color-text-2;
   text-align: center;
 
+  @media #{$mq-small-medium} {
+    padding: 36px 20px 40px;
+  }
+
   .section-title {
     position: relative;
     font-size: 35px;
@@ -15,6 +19,13 @@
     margin-bottom: 28px;
     font-weight: $font-weight-light;
     padding-bottom: 24px;
+
+    @media #{$mq-small-medium} {
+      font-size: 24px;
+      line-height: 35px;
+      padding-bottom: 18px;
+      margin-bottom: 16px;
+    }
 
     &:after {
       content: '';
