--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -27,6 +27,11 @@ $menu-container-width: 220px;
     align-items: center;
     height: 100%;
     margin-right: 30px;
+    font-weight: $font-weight-default;
+
+    h1 {
+      font-weight: $font-weight-default;
+    }
 
     @media #{$mq-small-medium} {
       margin: 0;
