Fix grapsh axis & tooltip values in firefox

--- a/css/components/ui/_modal.scss
+++ b/css/components/ui/_modal.scss
@@ -92,7 +92,7 @@
     z-index: 2; /* Otherwise, it won't be reachable */
 
     &:hover {
-      fill: $color-error;
+      fill: rgba($color-primary, .5);
     }
   }
 
