--- a/css/components/pages/_about.scss
+++ b/css/components/pages/_about.scss
@@ -34,6 +34,30 @@
   .agencies-list {
     position: relative;
 
+    .principal-agency-container {
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      background-color: $color-bg-light;
+      padding: 50px 20px 15px;
+      margin-bottom: 30px;
+
+      .principal-agency-title {
+        color: $color-text-2;
+      }
+
+      .section-description {
+        margin-bottom: 100px;
+        color: $color-text-2;
+        max-width: 50%;
+        text-align: center;
+
+        @media #{$mq-small-medium} {
+          max-width: 100%;
+        }
+      }
+    }
+
     .agencies-logo {
       display: flex;
       justify-content: center;
@@ -46,13 +70,6 @@
       }
     }
 
-    .principal-agency-title {
-      color: $color-text-2;
-    }
-
-    .section-description {
-      margin-bottom: 100px;
-    }
 
     .agency-container {
       padding: 0 10px;
