--- a/css/components/form/_checkbox.scss
+++ b/css/components/form/_checkbox.scss
@@ -24,7 +24,7 @@
     align-items: center;
     width: 15px;
     height: 15px;
-    border: 1px solid $color-text-2;
+    border: 1px solid $color-secondary;
     cursor: pointer;
   }
 }
