--- a/css/components/pages/_about.scss
+++ b/css/components/pages/_about.scss
@@ -28,6 +28,7 @@
     background-image: url('/static/images/aboutalliance.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
   }
 
   /* Section */
