--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -142,8 +142,12 @@
     }
 
     .image-container {
-      max-width: 100px;
+      // max-width: 100px;
       // max-height: 50px;
+
+      img {
+        max-height: 80px;
+      }
     }
   }
 }
