--- a/css/components/pages/_about.scss
+++ b/css/components/pages/_about.scss
@@ -41,7 +41,7 @@
       align-items: center;
       background-color: $color-bg-light;
       padding: 50px 20px 15px;
-      margin-bottom: 30px;
+      margin: 0 10px 20px;
 
       .principal-agency-title {
         color: $color-text-2;
