--- a/css/components/map/_legend.scss
+++ b/css/components/map/_legend.scss
@@ -6,6 +6,7 @@
   max-height: 260px;
   z-index: 1001;
   background-color: $color-bg-dark;
+  border-top: 1px solid $color-border-1;
   border-bottom: 1px solid $color-border-1;
 
   &.-hidden {
