--- a/css/components/ui/_compare-toolbar.scss
+++ b/css/components/ui/_compare-toolbar.scss
@@ -1,17 +1,20 @@
 
 .c-compare-toolbar {
   position: fixed;
-  left: 50%;
+  left: 0;
   bottom: 0;
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 42px;
   padding: 0 20px 20px;
-  transform: translateX(-50%);
+  background-color: $color-bg-dark;
+  border-top: 1px solid $color-border-1;
   z-index: 1002;
 
-  @media #{$mq-medium} {
-    width: auto;
+  .actions-container {
+    position: relative;
+    top: -20px;
   }
 
   .c-button {
