--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -12,6 +12,11 @@
   border-left: 0;
   border-top: 0;
 
+  &:hover {
+    box-shadow: 0 0 22px 0 rgba(0, 0, 0, 0.52);
+    border: 0;
+  }
+
   &.-link {
     width: 100%;
     height: 100%;
