Change home background image

--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -21,7 +21,7 @@
 
   /* Intro */
   .c-intro {
-    background-image: url('/static/images/home_1.png');
+    background-image: url('/static/images/home_1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: $color-bg-light;
