--- a/css/components/ui/_item-tools.scss
+++ b/css/components/ui/_item-tools.scss
@@ -1,6 +1,7 @@
 
 .c-item-tools {
   display: flex;
+  flex-flow: row wrap;
   align-items: center;
   color: rgba($color-text-1, .5);
 
@@ -10,6 +11,7 @@
     padding: 0 10px;
     border: 1px solid rgba($color-text-1, .5);
     border-radius: 100px;
+    margin-bottom: 3px;
   }
 
   .other-tools {
@@ -17,7 +19,7 @@
 
     > * {
       margin-right: 7px;
-      
+
       &:last-child {
         margin-right: 0;
       }
