--- a/css/components/ui/_item-tools.scss
+++ b/css/components/ui/_item-tools.scss
@@ -11,7 +11,8 @@
     padding: 0 10px;
     border: 1px solid rgba($color-text-1, .5);
     border-radius: 100px;
-    margin-bottom: 3px;
+    margin-top: 6px;
+    margin-bottom: 6px;
   }
 
   .other-tools {
