--- a/css/components/ui/_card-image.scss
+++ b/css/components/ui/_card-image.scss
@@ -20,6 +20,7 @@
     justify-content: flex-end;
     width: 100%;
     height: 100%;
+    color: $color-text-1;
 
     .type-title {
       font-size: $font-size-big;
