Add proper icons

--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -1,6 +1,7 @@
 $menu-container-width: 220px;
 
 .c-header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
