--- a/css/components/ui/_select-accordion.scss
+++ b/css/components/ui/_select-accordion.scss
@@ -33,7 +33,7 @@
 
       .c-icon {
         margin-left: 10px;
-        fill: $color-text-1;
+        fill: $color-primary;
       }
     }
 
@@ -88,7 +88,7 @@
 
           .c-icon {
             margin-left: 10px;
-            fill: $color-text-1;
+            fill: $color-primary;
           }
         }
       }
