--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -26,7 +26,7 @@
     background-size: cover;
     background-color: $color-bg-light;
     color: $color-text-2;
-    background-position: center;
+    background-position: bottom left;
 
     .link {
       @media #{$mq-mobile} {
