--- a/css/components/ui/_filters-selected-bar.scss
+++ b/css/components/ui/_filters-selected-bar.scss
@@ -57,8 +57,6 @@
 
         .c-icon {
           fill: $color-primary;
-          stroke: $color-primary;
-          stroke-width: 3px;
         }
       }
     }
@@ -127,6 +125,7 @@
         align-items: center;
         padding: 0;
         cursor: pointer;
+        margin-top: 2px;
 
         .c-icon {
           fill: rgba($color-text-1, .5);
