--- a/css/components/pages/_about.scss
+++ b/css/components/pages/_about.scss
@@ -3,7 +3,7 @@
   background-color: $color-bg-dark;
 
   &.-logged {
-    background-color: $color-bg-cream;
+    background-color: $color-bg-light;
 
     /* Header fits */
     .c-header {
