--- a/css/components/ui/_card-info.scss
+++ b/css/components/ui/_card-info.scss
@@ -4,7 +4,12 @@
   height: 100%;
   text-align: left;
   background-color: $color-bg-light;
-  // border: 1px solid rgba(30, 39, 39, .2);
+  border: 1px solid rgba(30, 39, 39, .2);
+
+  &:hover {
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08);
+    border: 0;
+  }
 
   .card-logo {
     width: 100%;
