Add widgets dates

--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -112,6 +112,12 @@
       font-weight: $font-weight-default;
       margin-bottom: 5px;
     }
+
+    .item-dates {
+      margin-bottom: 10px;
+      margin-top: -4px;
+      font-size: $font-size-small;
+    }
   }
 
   /* Content */
