--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -11,6 +11,10 @@ $menu-container-width: 220px;
     padding: 0 30px;
   }
 
+  &.-fixed {
+    background-color: $color-bg-dark;
+  }
+
   .header-container {
     display: flex;
     flex-flow: row wrap;
@@ -123,15 +127,19 @@ $menu-container-width: 220px;
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
-    width: 100%;
+    height: 100vh;
+    width: 0;
     z-index: -1;
+    overflow: hidden;
 
     &.-open {
+      width: 100%;
       z-index: 10003;
+      overflow: auto;
 
       .overlay {
         opacity: 1;
+        width: 100%;
         transition: opacity $animation-time-2 $ease-out-cubic;
       }
 
@@ -145,8 +153,8 @@ $menu-container-width: 220px;
       position: fixed;
       top: 0;
       left: 0;
-      bottom: 0;
-      width: 100%;
+      height: 100vh;
+      width: 0;
       opacity: 0;
       background: rgba($color-bg-dark, .7);
       cursor: pointer;
