--- a/css/index.scss
+++ b/css/index.scss
@@ -96,6 +96,7 @@
 @import 'components/ui/sidebar';
 @import 'components/ui/slider';
 @import 'components/ui/spinner';
+@import 'components/ui/sticky';
 @import 'components/ui/switch';
 @import 'components/ui/title';
 @import 'components/ui/tooltip';
