--- a/css/components/ui/_filters-selected-bar.scss
+++ b/css/components/ui/_filters-selected-bar.scss
@@ -8,6 +8,10 @@
   border: 1px solid $color-border-1;
   border-top: 0;
 
+  &.-fixed {
+    background-color: $color-bg-dark;
+  }
+
   > div {
     display: flex;
     flex-flow: row wrap;
