Set compare area bar as sticky in devices

--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -13,6 +13,10 @@ $menu-container-width: 220px;
 
   &.-fixed {
     background-color: $color-bg-dark;
+
+    .header-container {
+      padding: 14px 0;
+    }
   }
 
   .header-container {
