--- a/css/components/ui/_area-toolbar.scss
+++ b/css/components/ui/_area-toolbar.scss
@@ -13,7 +13,7 @@
   }
 
   &.-fixed {
-    background-color: $color-secondary;
+    background-color: #253131;
   }
 
   .location-select-container {
