Add device compare views switch

--- a/css/index.scss
+++ b/css/index.scss
@@ -98,6 +98,7 @@
 @import 'components/ui/spinner';
 @import 'components/ui/sticky';
 @import 'components/ui/switch';
+@import 'components/ui/switch-labels';
 @import 'components/ui/title';
 @import 'components/ui/tooltip';
 @import 'components/ui/topic-icon';
