Add area number

--- a/css/components/ui/_switch-labels.scss
+++ b/css/components/ui/_switch-labels.scss
@@ -12,7 +12,7 @@
   &.-right {
     .dot {
       transform: translateX(calc(100% + 3px));
-      transition: $animation-time-2 all $ease-out-sine;
+      transition: $animation-time-2 all $ease-in-sine;
     }
   }
 
