--- a/css/components/ui/_area-toolbar.scss
+++ b/css/components/ui/_area-toolbar.scss
@@ -28,6 +28,12 @@
         line-height: 16px;
         color: rgba($color-text-1, .5);
         padding: 0;
+
+        .area-number {
+          color: $color-text-1;
+          margin-right: 5px;
+          font-size: 16px;
+        }
       }
 
       .c-icon {
