--- a/css/components/ui/_pickdate.scss
+++ b/css/components/ui/_pickdate.scss
@@ -27,6 +27,15 @@
   width: 525px;
   transform: translateY(10px);
 
+  @media #{$mq-mobile} {
+    width: 100%;
+
+    .calendar {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
   .daterangepicker_input {
     input {
       padding: 0;
@@ -126,10 +135,6 @@
               line-height: 16px;
               text-transform: lowercase;
             }
-          }
-
-          .prev.available {
-
           }
         }
       }
