Add principal partner in home footer

--- a/css/components/pages/_home.scss
+++ b/css/components/pages/_home.scss
@@ -131,6 +131,10 @@
   }
 
   .agencies {
+    .principals-container {
+      margin-bottom: 35px;
+    }
+
     .principal-agency {
       display: flex;
       justify-content: center;
