--- a/css/components/ui/_area-toolbar.scss
+++ b/css/components/ui/_area-toolbar.scss
@@ -17,10 +17,69 @@
   }
 
   .location-select-container {
+
     @media #{$mq-small-medium} {
       .btn-area {
         display: flex;
         align-items: center;
+        padding: 8px;
+
+        &.-highlighted {
+          -webkit-animation-name: flash;
+          animation-name: flash;
+          -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+          -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+
+          @-webkit-keyframes flash {
+            0%, 50%, 100% { background-color: transparent; }
+            25%, 75% { background-color: $color-threshold-success; }
+          }
+
+          @keyframes flash {
+            0%, 50%, 100% { background-color: transparent; }
+            25%, 75% { background-color: $color-threshold-success; }
+          }
+
+          .area-name {
+            -webkit-animation-name: areaName;
+            animation-name: areaName;
+            -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+
+            @-webkit-keyframes areaName {
+              0%, 50%, 100% { color: rgba($color-text-1, .5); }
+              25%, 75% { color: rgba($color-text-2, .7); }
+            }
+
+            @keyframes areaName {
+              0%, 50%, 100% { color: rgba($color-text-1, .5); }
+              25%, 75% { color: rgba($color-text-2, .7); }
+            }
+          }
+
+          .area-number {
+            -webkit-animation-name: areaNum;
+            animation-name: areaNum;
+            -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+
+            @-webkit-keyframes areaNum {
+              0%, 50%, 100% { color: $color-text-1; }
+              25%, 75% { color: rgba($color-text-2, .7); }
+            }
+
+            @keyframes areaNum {
+              0%, 50%, 100% { color: $color-text-1; }
+              25%, 75% { color: rgba($color-text-2, .7); }
+            }
+          }
+        }
       }
 
       .area-name {
@@ -29,9 +88,6 @@
         color: rgba($color-text-1, .5);
         padding: 0;
 
-        &.-highlighted {
-          color: $color-primary;
-        }
 
         .area-number {
           color: $color-text-1;
