--- a/css/components/pages/_widget.scss
+++ b/css/components/pages/_widget.scss
@@ -37,6 +37,10 @@
             margin-top: 1px;
           }
         }
+        .logo {
+          max-width: 40px;
+          margin: 0 0 0 $space-1;
+        }
       }
 
       border: 1px solid $color-border-1;
