--- a/css/components/ui/_dashboard-item.scss
+++ b/css/components/ui/_dashboard-item.scss
@@ -159,6 +159,11 @@
         line-height: 16px;
         color: $color-text-1;
       }
+
+      .logo {
+        max-width: 40px;
+        margin: 0 0 0 $space-1;
+      }
     }
 
     .item-link {
