--- a/css/components/layout/_footer.scss
+++ b/css/components/layout/_footer.scss
@@ -20,6 +20,24 @@
         text-transform: uppercase;
       }
     }
+  }
 
+  .nav-img-list {
+    display: flex;
+    align-items: center;
+
+    > li {
+      margin: 0 0 0 30px;
+      max-width: 100px;
+
+      &:first-child {
+        margin: 0;
+      }
+
+      > a {
+        padding: 0 10px;
+        text-transform: uppercase;
+      }
+    }
   }
 }
