--- a/css/components/ui/_modal.scss
+++ b/css/components/ui/_modal.scss
@@ -139,6 +139,20 @@
       height: calc(100vh - 120px);
     }
   }
+
+  // SIZES
+  &.-pdf {
+    .modal-container {
+      max-width: none;
+      width: 210mm + 30mm;
+    }
+
+    .modal-content {
+      max-height: calc(100vh - 120px);
+      background: $color-bg-light;
+    }
+  }
+
 }
 
 /* Override toastr */
