--- a/css/components/layout/_header.scss
+++ b/css/components/layout/_header.scss
@@ -6,6 +6,7 @@ $menu-container-width: 220px;
   justify-content: space-between;
   padding: 0 20px;
   border-bottom: 1px solid $color-border-1;
+  z-index: 2;
 
   @media #{$mq-medium} {
     padding: 0 30px;
